corrected dependency checker